# AI_Credit_Risk_platform

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  credit-risk-platform.code-workspace  docker-compose.yml  pyproject.toml
artifacts/: README.md
artifacts/monitoring/: train_outlier_summary.csv
artifacts/profiles/: advanced_model_summary.json  baseline_model_summary.json  business_decisioning_summary.json  german_credit_prepare_summary.json  german_credit_standardized_missingness.csv  german_credit_standardized_profile.json  german_credit_sync_summary.json  model_monitoring_summary.json  shap_explainability_summary.json  split_strategy_summary.json  (+1 more)
data/: README.md
docs/: architecture.md  build_roadmap.md  professional_workflow.md
models/: random_forest_champion_pipeline.joblib
notebooks/: 01_business_problem_and_stakeholders.ipynb  02_business_understanding_and_target_definition.ipynb  03_data_audit_and_eda_structured.ipynb  04_data_cleaning_plan.ipynb  05_split_strategy_and_leakage_control.ipynb  06_outlier_detection_and_preprocessing.ipynb  07_baseline_models.ipynb  08_advanced_models.ipynb  09_explainability_shap.ipynb  10_business_thresholds_and_decisioning.ipynb  11_model_monitoring_and_feedback_loop.ipynb  12_fastapi_scoring_service.ipynb  README.md
reports/: README.md
scripts/: README.md  inspect_german_credit_files.py  prepare_german_credit_data.py  run_data_audit.py  run_preprocessing_dry_run.py  run_project_bootstrap.py  sync_german_credit_data.py
tests/: test_api_smoke.py  test_german_credit_data.py  test_split.py
(+37 files in other folders)
