[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-credit-risk-platform"
version = "0.1.0"
description = "Production-style credit risk platform with EDA, preprocessing, explainability, deployment, and monitoring."
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [{ name = "OpenAI Codex" }]
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pandas>=2.2,<3.0",
  "numpy>=1.26,<3.0",
  "scikit-learn==1.7.2",
  "xgboost>=2.0,<3.0",
  "lightgbm>=4.3,<5.0",
  "shap>=0.45,<1.0",
  "matplotlib>=3.8,<4.0",
  "seaborn>=0.13,<1.0",
  "plotly>=5.22,<6.0",
  "streamlit>=1.35,<2.0",
  "mlflow>=2.12,<3.0",
  "prometheus-client>=0.20,<1.0",
  "pydantic>=2.7,<3.0",
  "joblib>=1.4,<2.0",
  "jupyterlab>=4.2,<5.0",
  "ipykernel>=6.29,<7.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.2,<9.0",
  "coverage[toml]>=7.5,<8.0",
  "ruff>=0.5,<1.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
